--- a/kubernetes/apps/k0s/kube-system/cilium/ks.yaml
+++ b/kubernetes/apps/k0s/kube-system/cilium/ks.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cluster-apps-cilium
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/${ENVIRONMENT}/kube-system/cilium/app
+  path: ./kubernetes/apps/k0s/kube-system/cilium/app
   prune: false
   sourceRef:
     kind: GitRepository
