--- a/kubernetes/apps/k0s/cert-manager/cert-manager/ks.yaml
+++ b/kubernetes/apps/k0s/cert-manager/cert-manager/ks.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cluster-apps-cert-manager
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/${ENVIRONMENT}/cert-manager/cert-manager/app
+  path: ./kubernetes/apps/k0s/cert-manager/cert-manager/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -23,7 +23,7 @@ metadata:
 spec:
   dependsOn:
     - name: cluster-apps-cert-manager
-  path: ./kubernetes/apps/${ENVIRONMENT}/cert-manager/cert-manager/issuers
+  path: ./kubernetes/apps/k0s/cert-manager/cert-manager/issuers
   prune: true
   sourceRef:
     kind: GitRepository
