--- a/kubernetes/apps/k0s/kube-system/local-path-provisioner/ks.yaml
+++ b/kubernetes/apps/k0s/kube-system/local-path-provisioner/ks.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     substitution.flux.home.arpa/disabled: "true"
 spec:
-  path: ./kubernetes/apps/${ENVIRONMENT}/kube-system/local-path-provisioner/app
+  path: ./kubernetes/apps/k0s/kube-system/local-path-provisioner/app
   prune: true
   sourceRef:
     kind: GitRepository
