--- a/kubernetes/apps/k0s/kube-system/reloader/ks.yaml
+++ b/kubernetes/apps/k0s/kube-system/reloader/ks.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cluster-apps-reloader
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/${ENVIRONMENT}/kube-system/reloader/app
+  path: ./kubernetes/apps/k0s/kube-system/reloader/app
   prune: true
   sourceRef:
     kind: GitRepository
