--- a/kubernetes/apps/k0s/kube-system/snapshot-controller/ks.yaml
+++ b/kubernetes/apps/k0s/kube-system/snapshot-controller/ks.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cluster-apps-snapshot-controller
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/${ENVIRONMENT}/kube-system/snapshot-controller/app
+  path: ./kubernetes/apps/k0s/kube-system/snapshot-controller/app
   prune: true
   sourceRef:
     kind: GitRepository
