--- a/kubernetes/apps/k0s/security/lldap/ks.yaml
+++ b/kubernetes/apps/k0s/security/lldap/ks.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   dependsOn:
     - name: cluster-apps-lldap-database
-  path: ./kubernetes/apps/${ENVIRONMENT}/security/lldap/app
+  path: ./kubernetes/apps/k0s/security/lldap/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -25,7 +25,7 @@ metadata:
 spec:
   dependsOn:
     - name: cluster-apps-cloudnative-pg
-  path: ./kubernetes/apps/${ENVIRONMENT}/security/lldap/database
+  path: ./kubernetes/apps/k0s/security/lldap/database
   prune: true
   sourceRef:
     kind: GitRepository
