--- a/kubernetes/apps/k0s/security/oauth2-proxy/ks.yaml
+++ b/kubernetes/apps/k0s/security/oauth2-proxy/ks.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   dependsOn:
     - name: cluster-apps-dex
-  path: ./kubernetes/apps/${ENVIRONMENT}/security/oauth2-proxy/app
+  path: ./kubernetes/apps/k0s/security/oauth2-proxy/app
   prune: true
   sourceRef:
     kind: GitRepository
