--- a/kubernetes/apps/k8s/database/redis/ks.yaml
+++ b/kubernetes/apps/k8s/database/redis/ks.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cluster-apps-redis
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/${ENVIRONMENT}/database/redis/app
+  path: ./kubernetes/apps/k8s/database/redis/app
   prune: true
   sourceRef:
     kind: GitRepository
