--- a/kubernetes/apps/k8s/home-automation/externalsecret.yaml
+++ b/kubernetes/apps/k8s/home-automation/externalsecret.yaml
@@ -18,7 +18,7 @@ spec:
       version: "v2"
       auth:
         kubernetes:
-          mountPath: "kubernetes/${ENVIRONMENT}"
+          mountPath: "kubernetes/k8s"
           role: "home-automation"
           serviceAccountRef:
             name: "vault-auth"
