--- a/kubernetes/apps/k8s/home-automation/home-assistant/ks.yaml
+++ b/kubernetes/apps/k8s/home-automation/home-assistant/ks.yaml
@@ -8,7 +8,7 @@ spec:
   dependsOn:
     - name: cluster-apps-home-automation-home-assistant-database
     - name: cluster-apps-influxdb
-  path: ./kubernetes/apps/${ENVIRONMENT}/home-automation/home-assistant/app
+  path: ./kubernetes/apps/k8s/home-automation/home-assistant/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -26,7 +26,7 @@ metadata:
 spec:
   dependsOn:
     - name: cluster-apps-cloudnative-pg
-  path: ./kubernetes/apps/${ENVIRONMENT}/home-automation/home-assistant/database
+  path: ./kubernetes/apps/k8s/home-automation/home-assistant/database
   prune: true
   sourceRef:
     kind: GitRepository
