--- a/kubernetes/apps/k8s/kube-system/descheduler/ks.yaml
+++ b/kubernetes/apps/k8s/kube-system/descheduler/ks.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cluster-apps-descheduler
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/${ENVIRONMENT}/kube-system/descheduler/app
+  path: ./kubernetes/apps/k8s/kube-system/descheduler/app
   prune: true
   sourceRef:
     kind: GitRepository
