--- a/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/monitoring/grafana/app/externalsecret.yaml
@@ -19,7 +19,7 @@ spec:
         ldap-toml: |
           verbose_logging = true
           [[servers]]
-          host = "lldap.${PRIVATE_DOMAIN}"
+          host = "lldap.${K0S_DOMAIN}"
           port = 389
           use_ssl = false
           start_tls = false
