update example .env

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,67 @@
+
+# common
+LOCAL_DOMAIN="example.com"
+VIP_PORT="443"
+
+# k0s cluster
+K0S_CILIUM_ID="2"
+K0S_CILIUM_LB_IP="192.168.0.100"
+K0S_DOMAIN="example.com"
+K0S_VIP_IP="192.168.0.101"
+K0S_SERVER_CIDR="192.168.0.102/32"
+K0S_IPAM_CIDR="192.168.0.10/30"
+K0S_NGINX_LB_IP="192.168.0.103"
+K0S_INGRESS_PROXMOX_IP="192.168.1.5"
+K0S_INGRESS_KVM_IP="192.168.0.104"
+K0S_INGRESS_VACUUM_IP="192.168.0.105"
+K0S_INGRESS_UNIFI_IP="192.168.0.1"
+K0S_INGRESS_DRAC_IP="192.168.1.6"
+
+# k8s cluster
+K8S_CILIUM_ID="1"
+K8S_CILIUM_LB_IP="192.168.0.106"
+K8S_DOMAIN="example.com"
+K8S_VIP_IP="192.168.0.107"
+K8S_SERVER_CIDR="192.168.0.0/24"
+K8S_IPAM_CIDR="192.168.0.110/27"
+K8S_NGINX_LB_IP="192.168.0.108"
+
 # cloudflare
-CLOUDFLARE_EMAIL="dan@example.com"
+CLOUDFLARE_EMAIL="user@example.com"
 CLOUDFLARE_TOKEN="xxxxxxxx"
+
+# dex
+DEX_IMMICH_CLIENT_SECRET="xxxxxxxx"
+
+# docker
+DOCKER_PRIVATE_REGISTRY="namespace"
+DOCKER_PULL_SECRET="xxxxxxxx"
 
 # emqx
 EMQX_ADMIN_PASSWORD="xxxxxxxx"
 EMQX_USER1_NAME="xxxxxxxx"
 EMQX_USER1_PASSWORD="xxxxxxxx"
-EMQX_LB_IP="192.168.0.102"
+EMQX_LB_IP="192.168.0.109"
 
 # frigate
 FRIGATE_PLUS_API_KEY="xxxxxxxx"
 FRIGATE_DVR_URL="192.168.0.1:7441"
-FRIGATE_CAM1_NAME="some_camera"
+FRIGATE_CAM1_NAME="cam_1"
 FRIGATE_CAM1_ID="xxxxxxxx"
+FRIGATE_CAM2_NAME="cam_2"
+FRIGATE_CAM2_ID="xxxxxxxx"
+FRIGATE_CAM3_NAME="cam_3"
+FRIGATE_CAM3_ID="xxxxxxxx"
+FRIGATE_CAM4_NAME="cam_4"
+FRIGATE_CAM4_ID="xxxxxxxx"
+FRIGATE_CAM5_NAME="cam_5"
+FRIGATE_CAM5_ID="xxxxxxxx"
+FRIGATE_CAM6_NAME="cam_6"
+FRIGATE_CAM6_ID="xxxxxxxx"
+FRIGATE_CAM7_NAME="cam_7"
+FRIGATE_CAM7_ID="xxxxxxxx"
+FRIGATE_CAM8_NAME="cam_8"
+FRIGATE_CAM8_ID="xxxxxxxx"
 
 # grafana
 GRAFANA_ADMIN_USER="xxxxxxxx"
@@ -20,61 +69,88 @@ GRAFANA_ADMIN_PASSWORD="xxxxxxxx"
 GRAFANA_LDAP_SERVER="ldap.example.com"
 GRAFANA_LDAP_USERNAME="xxxxxxxx"
 GRAFANA_LDAP_PASSWORD="xxxxxxxx"
-GRAFANA_LDAP_ROOT="dc=ldap,dc=example,dc=com"
+GRAFANA_LDAP_ROOT="dc=example,dc=com"
 
 # home-assistant
+HASS_POSTGRES_SUPER_USER="postgres"
+HASS_POSTGRES_SUPER_PASSWORD="xxxxxxxx"
 HASS_POSTGRES_USER="xxxxxxxx"
 HASS_POSTGRES_PASSWORD="xxxxxxxx"
-HASS_POSTGRES_SUPER_USER="xxxxxxxx"
-HASS_POSTGRES_SUPER_PASSWORD="xxxxxxxx"
+HASS_DB_BACKUP_ACCESS_KEY="xxxxxxxx"
+HASS_DB_BACKUP_SECRET="xxxxxxxx"
 HASS_ALARM_CODE="xxxxxxxx"
 HASS_DEPLOY_KEY_B64="xxxxxxxx"
-HASS_GIT_REPO="xxxxxxxx"
-HACS_TOKEN="xxxxxxxx"
-HASS_LDAP_ROOT="dc=some,dc=example,dc=com"
+HASS_GIT_REPO="git@github.com:example/home-assistant.git"
+HASS_HACS_TOKEN="xxxxxxxx"
+HASS_LDAP_ROOT="dc=example,dc=com"
 HASS_LOCAL_DOMAIN="example.com"
 HASS_LOCATION_LAT="00.0000000"
 HASS_LOCATION_LONG="-00.0000000"
-HASS_DRAC_IP="xxxxxxxx"
+HASS_DRAC_IP="192.168.1.5"
 
 # immich
-IMMICH_POSTGRES_USER="immich"
-IMMICH_POSTGRES_PASSWORD="xxxxxxxx"
-IMMICH_JWT_SECRET="xxxxxxxxx"
+IMMICH_JWT_SECRET="xxxxxxxx"
 IMMICH_TYPESENSE_API_KEY="xxxxxxxx"
-IMMICH_POSTGRES_SUPER_USER="xxxxxxxx"
+IMMICH_POSTGRES_SUPER_USER="postgres"
 IMMICH_POSTGRES_SUPER_PASSWORD="xxxxxxxx"
+IMMICH_POSTGRES_USER="xxxxxxxx"
+IMMICH_POSTGRES_PASSWORD="xxxxxxxx"
+IMMICH_DB_BACKUP_ACCESS_KEY="xxxxxxxx"
+IMMICH_DB_BACKUP_SECRET="xxxxxxxx"
 
 # influxdb
 INFLUXDB_USER="xxxxxxxx"
 INFLUXDB_PASSWORD="xxxxxxxx"
-
-# kubernetes
-ENVIRONMENT="example"
-DOMAIN=example.com
-VIP_IP="192.168.0.100"
-VIP_PORT="443"
-SERVER_CIDR="192.168.0.0/24"
-IPAM_CIDR="192.168.0.224/27"
-DOCKER_PRIVATE_REGISTRY="xxxxxxxx"
 
 # lldap
 LLDAP_POSTGRES_SUPER_USER="postgres"
 LLDAP_POSTGRES_SUPER_PASSWORD="xxxxxxxx"
 LLDAP_POSTGRES_USER="xxxxxxxx"
 LLDAP_POSTGRES_PASSWORD="xxxxxxxx"
+LLDAP_DB_BACKUP_ACCESS_KEY="xxxxxxxx"
+LLDAP_DB_BACKUP_SECRET="xxxxxxxx"
+LLDAP_JWT_SECRET="xxxxxxxx"
+LLDAP_LDAP_USER_PASS="xxxxxxxx"
+LLDAP_LDAP_USER_EMAIL="dan@example.com"
+LLDAP_SERVER_KEY_SEED="xxxxxxxx"
+LLDAP_LDAP_BASE_DN="dc=example,dc=com"
+LLDAP_LB_IP="192.168.0.5"
 
-# nfs exports
-NFS_SERVER_IP="192.168.0.200"
+# minio
+MINIO_ROOT_USER="xxxxxxxx"
+MINIO_ROOT_PASSWORD="7xxxxxxxx"
+MINIO_CONSOLE_SECRET_KEY="xxxxxxxx"
+MINIO_CONSOLE_ACCESS_KEY="xxxxxxxx"
+
+# nginx
+NGINX_LB_IP="192.168.0.105"
+
+# nfs
+NFS_SERVER_IP="192.168.1.4"
+
+# OAUTH2-PROXY
+OAUTH2_CLIENT_SECRET="xxxxxxxx"
+OAUTH2_COOKIE_SECRET="xxxxxxxx"
+
+# registry
+REGISTRY_USERNAME="xxxxxxxx"
+REGISTRY_PASSWORD="xxxxxxxx"
 
 # restic
 RESTIC_URL="rest:https://xxxxxxxx:xxxxxxxx@restic.example.com"
+RESTIC_ESPHOME_PASSWORD="xxxxxxxx"
 RESTIC_FRIGATE_PASSWORD="xxxxxxxx"
 RESTIC_HASS_PASSWORD="xxxxxxxx"
 RESTIC_ZWAVEJS_PASSWORD="xxxxxxxx"
 
+# rsyslog
+RSYSLOG_LB_IP="192.168.0.108"
+
+# rtltcp
+RTLTCP_LB_IP="192.168.0.109"
+
 # rtlamr-collect
-RTLAMR_METERS="xxxxxxxx"
+RTLAMR_METERS="xxxxxxxx,xxxxxxxx"
 RTLAMR_MSGTYPE="scm,scm+"
 RTLAMR_INFLUXDB_DBNAME="rtlamr_collect"
 
@@ -84,16 +160,23 @@ SLACK_WEBHOOK="https://hooks.slack.com/services/xxxxxxxx"
 # tidbyt
 TIDBYT_API_KEY="xxxxxxxx"
 TIDBYT_DEVICE_ID="xxxxxxxx"
-TIDBYT_MQTT_TOPIC="xxxxxxxx"
-
-# unifi-downloader
-UNIFI_DOWNLOADER_HOST="192.168.0.1"
-UNIFI_DOWNLOADER_USERNAME="xxxxxxxx"
-UNIFI_DOWNLOADER_PASSWORD="xxxxxxxx"
+TIDBYT_MQTT_TOPIC="plm/xxxxxxxx"
 
 # vault
 VAULT_ADDR="https://vault.example.com"
-VAULT_TOKEN="xxxxxxxx"
-VAULT_UNSEAL_KEY_1="xxxxxxxx"
-VAULT_UNSEAL_KEY_2="xxxxxxxx"
-VAULT_UNSEAL_KEY_3="xxxxxxxx"
+
+# zwave
+ZWAVE_NETWORK_KEY="xxxxxxxx"
+
+# unifi-poller
+UNIFI_URL="https://unifi.example.com"
+UNIFI_USERNAME="xxxxxxxx"
+UNIFI_PASSWORD="xxxxxxxx"
+
+# unifi-downloader
+UNIFI_DOWNLOADER_HOST="https://unifi.example.com"
+UNIFI_DOWNLOADER_USERNAME="xxxxxxxx"
+UNIFI_DOWNLOADER_PASSWORD="xxxxxxxx"
+
+# weave-gitops
+ADMIN_PASSWORD="xxxxxxxx"
