--- a/.taskfiles/flux.yaml
+++ b/.taskfiles/flux.yaml
@@ -12,8 +12,8 @@ tasks:
     deps: [check]
     desc: Flux bootstrap
     cmds:      
-      - KUBECONFIG={{.ENVIRONMENT}}.kubeconfig kubectl apply --server-side --kustomize={{.ROOT_DIR}}/kubernetes/bootstrap/{{.ENVIRONMENT}}
-      - KUBECONFIG={{.ENVIRONMENT}}.kubeconfig task flux:bootstrap-k0s || true
+      - kubectl apply --server-side --kustomize={{.ROOT_DIR}}/kubernetes/bootstrap/{{.ENVIRONMENT}}
+      - task flux:bootstrap-k0s || true
 
   bootstrap-k0s:
     deps: [check]
@@ -28,38 +28,38 @@ tasks:
     deps: [bootstrap]
     desc: Flux install
     cmds:
-      - KUBECONFIG={{.ENVIRONMENT}}.kubeconfig kubectl apply --server-side --kustomize={{.ROOT_DIR}}/kubernetes/flux/config
+      - kubectl apply --server-side --kustomize={{.ROOT_DIR}}/kubernetes/flux/config
 
   sync:
     desc: Sync flux-system with the Git Repository
     cmds:
-      - KUBECONFIG={{.ENVIRONMENT}}.kubeconfig flux reconcile source git home-kubernetes
+      - flux reconcile source git home-kubernetes
 
   gr-sync:
     desc: Sync Flux GitRepositories
     cmd: |
-      KUBECONFIG={{.ENVIRONMENT}}.kubeconfig kubectl get gitrepositories --all-namespaces --no-headers | awk '{print $1, $2}' | xargs -n 1 -l bash -c \
+      kubectl get gitrepositories --all-namespaces --no-headers | awk '{print $1, $2}' | xargs -n 1 -l bash -c \
           'kubectl -n $0 annotate gitrepository/$1 reconcile.fluxcd.io/requestedAt=$(date +%s) --field-manager=flux-client-side-apply --overwrite'
 
   ks-sync:
     desc: Sync Flux Kustomizations
     cmd: |
-      KUBECONFIG={{.ENVIRONMENT}}.kubeconfig kubectl get kustomization --all-namespaces --no-headers | awk '{print $1, $2}' | xargs --max-procs=4 -l bash -c \
+      kubectl get kustomization --all-namespaces --no-headers | awk '{print $1, $2}' | xargs --max-procs=4 -l bash -c \
           'kubectl -n $0 annotate kustomization/$1 reconcile.fluxcd.io/requestedAt="$(date +%s)" --field-manager=flux-client-side-apply --overwrite'
 
   hr-sync:
     desc: Sync Flux HelmReleases
     cmd: |
-      KUBECONFIG={{.ENVIRONMENT}}.kubeconfig kubectl get helmreleases --all-namespaces --no-headers | awk '{print $1, $2}' | xargs --max-procs=4 -l bash -c \
+      kubectl get helmreleases --all-namespaces --no-headers | awk '{print $1, $2}' | xargs --max-procs=4 -l bash -c \
           'kubectl -n $0 annotate helmrelease/$1 reconcile.fluxcd.io/requestedAt="$(date +%s)" --overwrite'
 
   hr-suspend:
     desc: Suspend all Flux HelmReleases
     cmd: |
-      KUBECONFIG={{.ENVIRONMENT}}.kubeconfig flux get helmrelease --all-namespaces --no-header | awk '{print $1, $2}' | xargs -l bash -c 'flux -n $0 suspend helmrelease $1'
+      flux get helmrelease --all-namespaces --no-header | awk '{print $1, $2}' | xargs -l bash -c 'flux -n $0 suspend helmrelease $1'
 
   hr-resume:
     desc: Resume all Flux HelmReleases
     cmd: |
-      KUBECONFIG={{.ENVIRONMENT}}.kubeconfig flux get helmrelease --all-namespaces --no-header | awk '{print $1, $2}' | xargs -l bash -c 'flux -n $0 resume helmrelease $1'
+      flux get helmrelease --all-namespaces --no-header | awk '{print $1, $2}' | xargs -l bash -c 'flux -n $0 resume helmrelease $1'
 
