--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -4,7 +4,9 @@ version: "3"
 vars:
   CLUSTER_DIR: "{{.ROOT_DIR}}/kubernetes"
   ANSIBLE_DIR: "{{.ROOT_DIR}}/ansible"
-  ENVIRONMENT: "k8s"
+
+env:
+  KUBECONFIG: "{{.ENVIRONMENT}}.kubeconfig"
 
 dotenv: [".env"]
 
