--- a/kubernetes/bootstrap/k8s/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/k8s/sharedsecrets.yaml
@@ -23,6 +23,7 @@ spec:
         EMQX_LB_IP: "{{.EMQX_LB_IP}}"
         IPAM_CIDR: "{{.IPAM_CIDR}}"
         LOCAL_DOMAIN: "{{.LOCAL_DOMAIN}}"
+        K0S_DOMAIN: "{{.K0S_DOMAIN}}"
         PRIVATE_DOMAIN: "{{.PRIVATE_DOMAIN}}"
         ENVIRONMENT: "{{.ENVIRONMENT}}"
         NGINX_LB_IP: "{{.NGINX_LB_IP}}"
