--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -177,6 +177,13 @@ tasks:
           bound_service_account_namespaces=storage
           policies=security,storage,default
           ttl=1440h
+      - echo "path \"secret/data/cluster/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write development -
+      - echo "path \"secret/data/development/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write development -
+      - vault write auth/kubernetes/k8s/role/development
+          bound_service_account_names=vault-auth
+          bound_service_account_namespaces=development
+          policies=development,default
+          ttl=1440h
   # kv
   disable-kv:
     desc: disable kv secrets engine
@@ -211,6 +218,14 @@ tasks:
       # cert-manager
       - vault kv put -mount=secret cert-manager/cloudflare          
           CLOUDFLARE_TOKEN="{{.CLOUDFLARE_TOKEN}}"
+      # coder
+      - vault kv put -mount=secret development/coder
+          CODER_POSTGRES_USER="{{.CODER_POSTGRES_USER}}"
+          CODER_POSTGRES_PASSWORD="{{.CODER_POSTGRES_PASSWORD}}"
+          CODER_POSTGRES_SUPER_USER="{{.CODER_POSTGRES_SUPER_USER}}"
+          CODER_POSTGRES_SUPER_PASSWORD="{{.CODER_POSTGRES_SUPER_PASSWORD}}"
+          CODER_DB_BACKUP_ACCESS_KEY="{{.CODER_DB_BACKUP_ACCESS_KEY}}"
+          CODER_DB_BACKUP_SECRET="{{.CODER_DB_BACKUP_SECRET}}"
       # flux-system/notification
       - vault kv put -mount=secret flux-system/notification
           FLUX_SLACK_WEBHOOK="{{.SLACK_WEBHOOK}}"
