--- a/kubernetes/apps/k8s/development/coder/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/development/coder/app/externalsecret.yaml
@@ -14,7 +14,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        url="postgres://{{.CODER_POSTGRES_USER}}:{{.CODER_POSTGRES_PASSWORD}}@coder-rw.development.svc.cluster.local/coder?sslmode=disable"
+        url: "postgres://{{.CODER_POSTGRES_USER}}:{{.CODER_POSTGRES_PASSWORD}}@coder-rw.development.svc.cluster.local/coder?sslmode=disable"
   dataFrom:
     - extract:
         key: /development/coder
