add adguard ingress

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ K0S_VIP_IP="192.168.0.101"
 K0S_SERVER_CIDR="192.168.0.102/32"
 K0S_IPAM_CIDR="192.168.0.10/30"
 K0S_NGINX_LB_IP="192.168.0.103"
+K0S_INGRESS_ADGUARD_IP="192.168.1.2"
 K0S_INGRESS_PROXMOX_IP="192.168.1.5"
 K0S_INGRESS_KVM_IP="192.168.0.104"
 K0S_INGRESS_VACUUM_IP="192.168.0.105"
