--- a/kubernetes/bootstrap/k0s/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/k0s/sharedsecrets.yaml
@@ -22,6 +22,7 @@ stringData:
   VAULT_ADDR: "${VAULT_ADDR}"
   VIP_IP: "${K0S_VIP_IP}"
   VIP_PORT: "${VIP_PORT}"
+  INGRESS_ADGUARD_IP: "${K0S_INGRESS_ADGUARD_IP}"
   INGRESS_DRAC_IP: "${K0S_INGRESS_DRAC_IP}"
   INGRESS_KVM_IP: "${K0S_INGRESS_KVM_IP}"
   INGRESS_PROXMOX_IP: "${K0S_INGRESS_PROXMOX_IP}"
