--- a/kubernetes/apps/k0s/ingress/nginx/external-ingress/kustomization.yaml
+++ b/kubernetes/apps/k0s/ingress/nginx/external-ingress/kustomization.yaml
@@ -3,6 +3,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ./adguard.yaml
   - ./drac.yaml
   - ./kvm.yaml
   - ./proxmox.yaml
