add cloudflare ddns

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,7 @@ K8S_NGINX_LB_IP="192.168.0.108"
 # cloudflare
 CLOUDFLARE_EMAIL="user@example.com"
 CLOUDFLARE_TOKEN="xxxxxxxx"
+CLOUDFLARE_RECORD_NAME="ingress.example.com"
 
 # dex
 DEX_IMMICH_CLIENT_SECRET="xxxxxxxx"
