--- a/kubernetes/apps/k8s/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/monitoring/loki/app/helmrelease.yaml
@@ -77,7 +77,7 @@ spec:
         ruler:
           enable_api: true
           enable_alertmanager_v2: true
-          alertmanager_url: http://kube-prometheus-stack-alertmanager:9093
+          alertmanager_url: "https://alertmanager.${DOMAIN}"
           storage:
             type: local
             local:
