--- a/kubernetes/apps/k8s/monitoring/kustomization.yaml
+++ b/kubernetes/apps/k8s/monitoring/kustomization.yaml
@@ -10,4 +10,5 @@ resources:
   - ./grafana/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   - ./loki/ks.yaml
+  - ./promtail/ks.yaml
   - ./thanos/ks.yaml
