--- a/kubernetes/apps/k8s/monitoring/promtail/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/monitoring/promtail/app/helmrelease.yaml
@@ -3,19 +3,29 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: promtail
-  namespace: observability
+  namespace: monitoring
 spec:
-  interval: 5m
+  interval: 30m
+  timeout: 15m
   chart:
     spec:
-      # renovate: registryUrl=https://grafana.github.io/helm-charts
       chart: promtail
-      version: 6.3.0
+      version: 6.14.1
       sourceRef:
         kind: HelmRepository
-        name: grafana-loki-charts
+        name: grafana
         namespace: flux-system
-      interval: 5m
+  maxHistory: 2
+  install:
+    createNamespace: true
+    remediation:
+      retries: 3
+  upgrade:
+    cleanupOnFail: true
+    remediation:
+      retries: 3
+  uninstall:
+    keepHistory: false
   values:
     resources:
       requests:
