update loki endpoint

--- a/kubernetes/apps/k8s/monitoring/promtail/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/monitoring/promtail/app/helmrelease.yaml
@@ -35,7 +35,7 @@ spec:
         memory: 512Mi
     config:
       clients:
-        - url: "http://loki:3100/loki/api/v1/push"
+        - url: "http://loki-write:3100/loki/api/v1/push"
       snippets:
         extraScrapeConfigs: |
           - job_name: journal
