--- a/kubernetes/apps/k8s/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/monitoring/loki/app/helmrelease.yaml
@@ -65,7 +65,7 @@ spec:
                 period: 24h
         common:
           path_prefix: /var/loki
-          replication_factor: 3
+          replication_factor: 2
           storage:
             s3:
               s3: null
@@ -106,12 +106,22 @@ spec:
         analytics:
           reporting_enabled: false
     gateway:
-      replicas: 1
+      replicas: 2
       image:
         registry: ghcr.io
       ingress:
-        enabled: false
+        enabled: true
+        ingressClassName: nginx
+        hosts:
+          - host: &host "loki.${DOMAIN}"
+            paths:
+              - path: /
+                pathType: Prefix
+        tls:
+          - hosts:
+              - *host
     read:
+      replicas: 2
       persistence:
         storageClass: local-path
       extraVolumeMounts:
@@ -121,6 +131,7 @@ spec:
         - name: rules
           emptyDir: {}
     write:
+      replicas: 2
       persistence:
         storageClass: local-path
     backend:
