--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -206,8 +206,8 @@ tasks:
           CILIUM_ID="{{.K8S_CILIUM_ID}}"
           CILIUM_LB_IP="{{.K8S_CILIUM_LB_IP}}"
           CLOUDFLARE_EMAIL="{{.CLOUDFLARE_EMAIL}}"
-          DOMAIN="{{.K8S_DOMAIN}}"
           DOCKER_PRIVATE_REGISTRY="{{.DOCKER_PRIVATE_REGISTRY}}"
+          DOMAIN="{{.K8S_DOMAIN}}"
           ENVIRONMENT="k8s"
           EMQX_LB_IP="{{.EMQX_LB_IP}}"
           SLACK_WEBHOOK="{{.SLACK_WEBHOOK}}"
@@ -215,6 +215,7 @@ tasks:
           LOCAL_DOMAIN="{{.LOCAL_DOMAIN}}"
           K0S_DOMAIN="{{.K0S_DOMAIN}}"
           NGINX_LB_IP="{{.K8S_NGINX_LB_IP}}"
+          RSYSLOG_LB_IP="{{.K8S_RSYSLOG_LB_IP}}"
           NFS_SERVER_IP="{{.NFS_SERVER_IP}}"
           SERVER_CIDR="{{.K8S_SERVER_CIDR}}"
           VAULT_ADDR="{{.VAULT_ADDR}}"
