--- a/kubernetes/bootstrap/k8s/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/k8s/sharedsecrets.yaml
@@ -21,10 +21,10 @@ spec:
         DOCKER_PRIVATE_REGISTRY: "{{.DOCKER_PRIVATE_REGISTRY}}"
         DOMAIN: "{{.DOMAIN}}"
         EMQX_LB_IP: "{{.EMQX_LB_IP}}"
+        RSYSLOG_LB_IP: "{{.RSYSLOG_LB_IP}}"
         IPAM_CIDR: "{{.IPAM_CIDR}}"
         LOCAL_DOMAIN: "{{.LOCAL_DOMAIN}}"
         K0S_DOMAIN: "{{.K0S_DOMAIN}}"
-        PRIVATE_DOMAIN: "{{.PRIVATE_DOMAIN}}"
         ENVIRONMENT: "{{.ENVIRONMENT}}"
         NGINX_LB_IP: "{{.NGINX_LB_IP}}"
         NFS_SERVER_IP: "{{.NFS_SERVER_IP}}"
