--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,7 @@ K8S_VIP_IP="192.168.0.107"
 K8S_SERVER_CIDR="192.168.0.0/24"
 K8S_IPAM_CIDR="192.168.0.110/27"
 K8S_NGINX_LB_IP="192.168.0.108"
+K8S_RSYSLOG_LB_IP="192.168.0.109"
 
 # cloudflare
 CLOUDFLARE_EMAIL="user@example.com"
